reservation api get almost done